--- a/MeuDinheiro/pom.xml
+++ b/MeuDinheiro/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.3.13</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -32,10 +38,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>5.3.13</version>
-            <type>jar</type>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
         </dependency>
     </dependencies>
 
@@ -44,6 +49,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <executable>java</executable> <!-- Use 'java' as the executable -->
+                    <arguments>
+                        <argument>-jar</argument> <!-- Use '-jar' as the first argument -->
+                        <argument>target/MeuDinheiro-0.0.1-SNAPSHOT.jar</argument> <!-- Use the path to your JAR file -->
+                    </arguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
